--- a/Assignments/1/report/dissertation.tex
+++ b/Assignments/1/report/dissertation.tex
@@ -154,64 +154,18 @@
   \include{./tex/Chap/INTRO}
   \setcounter{table}{0}
   \setcounter{figure}{0}
-%  
-  \include{./tex/Chap/TARGET-ACQUISITION}
-  \setcounter{table}{0}
-  \setcounter{figure}{0}
-%  
-  \include{./tex/Chap/OBSTACLE-AVOIDANCE}
-  \setcounter{table}{0}
-  \setcounter{figure}{0}
-%  
-  \include{./tex/Chap/OBSTACLE-TARGET-NONLINEAR}
-  \setcounter{table}{0}
-  \setcounter{figure}{0}
-%  
-  \include{./tex/Chap/OBSTACLE-TARGET-LINEAR}
-  \setcounter{table}{0}
-  \setcounter{figure}{0}
-%  
-  \include{./tex/Chap/SPEED-CONTROL}
-  \setcounter{table}{0}
-  \setcounter{figure}{0}
+
+\include{./tex/Chap/ANALYSIS}
+\setcounter{table}{0}
+\setcounter{figure}{0}
 %
-%  \include{./tex/Chap/State-Art/STATE-ART}
+\include{./tex/Chap/DESIGN}
+\setcounter{table}{0}
+\setcounter{figure}{0}
+
+%  \include{./tex/Chap/CONCLUSION}
 %  \setcounter{table}{0}
 %  \setcounter{figure}{0}
-  %
-%   \include{./tex/Chap/Theor-Found/THEOR-FOUND}
-%  \setcounter{table}{0}
-%  \setcounter{figure}{0}
-%  %
-%  \include{./tex/Chap/Requirements/REQUIREMENTS}
-%  \setcounter{table}{0}
-%  \setcounter{figure}{0}
-%%  \include{./tex/Chap/Prob-Chal/PROB-CHALLENGE}
-%  \include{./tex/Chap/Analysis/ANALYSIS}
-%  \setcounter{table}{0}
-%  \setcounter{figure}{0}
-%  %
-%  \include{./tex/Chap/Design/DESIGN}
-%  \setcounter{table}{0}
-%  \setcounter{figure}{0}
-%  %\include{./tex/Chap/Devel/DEVELOPMENT}
-%  \include{./tex/Chap/Implem/IMPLEM}
-%  \setcounter{table}{0}
-%  \setcounter{figure}{0}
-%  %
-%  %\include{./tex/Chap/Applic/APPLICATION}
-%  \include{./tex/Chap/Testing/TESTING}
-%  \setcounter{table}{0}
-%  \setcounter{figure}{0}
-%  %
-%  %\include{./tex/Chap/Applic/APPLICATION}
-%  \include{./tex/Chap/Verif-Valid/VERIF-VALID}
-%  \setcounter{table}{0}
-%  \setcounter{figure}{0}
-%  %
-  \include{./tex/Chap/CONCLUSION}
-  \setcounter{table}{0}
-  \setcounter{figure}{0}
   % -----------------------------------------------------------------
   %
 	\bookmarksetup{startatroot} % Ends last part.
