UPDT: Market research and ADD: Theorical foundations

--- a/Assignments/1/report/bib/dissert.bib
+++ b/Assignments/1/report/bib/dissert.bib
@@ -196,5 +196,20 @@ publisher={ConvertIO},
   year={2011}
 }
 
+@misc{tvsellings,
+title={LCD TV shipments worldwide by vendor 2015-2019},
+url={https://www.statista.com/statistics/668519/lcd-tv-shipments-worldwide-by-vendor/},
+journal={Statista},
+publisher={Lionel Sujay Vailshery },
+  note={accessed: 2021-10-11},
+}
+
+@misc{btncode,
+title={Infrared Remote Controls: The Process},
+url={https://electronics.howstuffworks.com/remote-control2.htm},
+journal={howstuffworks},
+publisher={Julia Layton },
+  note={accessed: 2021-10-11},
+}
 % +++++++++++++++++++++++  END ==============================
 
