ADD: Image with bill of materials

--- a/Assignments/1/report/bib/dissert.bib
+++ b/Assignments/1/report/bib/dissert.bib
@@ -211,5 +211,12 @@ journal={howstuffworks},
 publisher={Julia Layton },
   note={accessed: 2021-10-11},
 }
+
+@misc{remotematerial,
+title={Infrared Remote Controls: Inside},
+url={https://electronics.howstuffworks.com/remote-control1.htm},
+publisher={Julia Layton },
+  note={accessed: 2021-10-11},
+}
 % +++++++++++++++++++++++  END ==============================
 
