UPDT: Intro & Analysis (final)

--- a/Assignments/1/report/bib/dissert.bib
+++ b/Assignments/1/report/bib/dissert.bib
@@ -208,14 +208,27 @@ publisher={Lionel Sujay Vailshery },
 title={Infrared Remote Controls: The Process},
 url={https://electronics.howstuffworks.com/remote-control2.htm},
 journal={howstuffworks},
-publisher={Julia Layton },
+publisher={Julia Layton},
   note={accessed: 2021-10-11},
 }
 
 @misc{remotematerial,
 title={Infrared Remote Controls: Inside},
 url={https://electronics.howstuffworks.com/remote-control1.htm},
-publisher={Julia Layton },
+publisher={Julia Layton},
+  note={accessed: 2021-10-11},
+}
+
+@misc{rasp-lirc,
+title={Using an IR remote with a Raspberry Pi media center},
+url={https://learn.adafruit.com/using-an-ir-remote-with-a-raspberry-pi-media-center},
+publisher={Adafruit},
+  note={accessed: 2021-10-11},
+}
+@misc{lirc,
+title={Linux Infrared Remote Control},
+url={https://www.lirc.org/},
+publisher={LIRC},
   note={accessed: 2021-10-11},
 }
 % +++++++++++++++++++++++  END ==============================
