--- a/Assignments/1/report/dissertation.tex
+++ b/Assignments/1/report/dissertation.tex
@@ -120,10 +120,10 @@
   \lstlistoflistings%
   \cleardoublepage%
   % list of Acronyms
- % \phantomsection%
- % \addcontentsline{toc}{chapter}{List of Abbreviations}
- % \listofacronyms%
- % \cleardoublepage%
+  \phantomsection%
+  \addcontentsline{toc}{chapter}{List of Abbreviations}
+  \listofacronyms%
+  \cleardoublepage%
     %\printglossary[type=\acronymtype]%
     %\printglossary[type=\acronymtype]%
  %   \listofabbreviations%
