--- a/Assignments/1/report/sec/acronyms.tex
+++ b/Assignments/1/report/sec/acronyms.tex
@@ -120,4 +120,11 @@
 \newglossaryentry{MAC}{name={MAC},description={\nopostdesc}}
 \newacronym[parent=MAC]{mac1}{MAC}{Machine Address Code}
 \newacronym[parent=MAC]{mac2}{MAC}{Media Access Control}
+%
+\newacronym{led}{LED}{Light Emitting Diode}
+\newacronym{tv}{TV}{Television}
+\newacronym{hw}{HW}{Hardware}
+\newacronym{sw}{SW}{Software}
+\newacronym{ir}{IR}{infrared}
+\newacronym{lirc}{LIRC}{Linux Infrared Remote Control}
 % ========================== END ======================
