UPDT: Design w/ intro

--- a/Assignments/1/report/sty/dissertation-xelatex.sty
+++ b/Assignments/1/report/sty/dissertation-xelatex.sty
@@ -583,15 +583,15 @@ align=left, leftmargin=*} %,label=$\star$
 \\\withnewsgott{\@school}
 \\\withnewsgott{\@department}
 %\\\rule{0pt}{0.5cm}
-\\\withboldnewsgott{{Nonlinear Dynamic Systems and Neural Networks}}
+\\\withboldnewsgott{{Embedded systems}}
 \\\rule{0pt}{1cm}
-\\\withboldnewsgott{\large{Autonomous Navigation: Report}}
+\\\withboldnewsgott{\large{Assignment 1: Report}}
 \\\rule{0pt}{3cm}
 %\\\withboldnewsgott{\Large\@titleA}
 %\\\withboldnewsgott{\Large\@titleB}
-\\\withboldnewsgott{\Huge{Autonomous Navigation for}}
-\\\withboldnewsgott{\Huge{mobile robots with modest}}
-\\\withboldnewsgott{\Huge{computational resources}}
+\\\withboldnewsgott{\Huge{Development of a 3 button}}
+\\\withboldnewsgott{\Huge{TV remote control --- }}
+\\\withboldnewsgott{\Huge{Analysis \& Design}}
 \\\rule{0pt}{3cm}
 %\\\withboldnewsgott{\hspace{2cm}\large{Group 7}}
 \\\rule{0pt}{0.1cm}
@@ -652,13 +652,13 @@ align=left, leftmargin=*} %,label=$\star$
 \author{%
   \begin{tabular}{ll}
     José Pires & A50178\\
-    Mariana Duarte & A85420
+    Hugo Freitas & A85420
   \end{tabular}%
   %\vspace{1cm}
 }
 %
 % Supervisor(s)
-\supervisor{Full Professor Estela Bicho}
+\supervisor{Professor Tiago Gomes}
 %
 % University (uncomment if you need to change default values)
 % \def\school{Escola de Engenharia}
