ADD: HW specification

--- a/Assignments/1/report/bib/dissert.bib
+++ b/Assignments/1/report/bib/dissert.bib
@@ -231,5 +231,11 @@ url={https://www.lirc.org/},
 publisher={LIRC},
   note={accessed: 2021-10-11},
 }
+@misc{microchip,
+title={MCP23008/MCP23S08 I/O expander with serial interface},
+url={shorturl.at/jmzV3},
+publisher={Microchip},
+  note={accessed: 2021-10-11},
+}
 % +++++++++++++++++++++++  END ==============================
 
