--- a/Assignments/1/report/sec/acronyms.tex
+++ b/Assignments/1/report/sec/acronyms.tex
@@ -104,6 +104,7 @@
 \newacronym{nvs}{NVS}{Navigation Virtual Subsystem}
 \newacronym{rvvs}{RVVS}{Remote Vision Virtual Subsystem}
 \newacronym{i2c}{I2C}{Inter-Integrated Circuit}
+\newacronym{spi}{I2C}{Serial Peripheral Interface}
 \newacronym{ide}{IDE}{Integrated Development Environment}
 \newacronym{pc}{PC}{Personal Computer}
 \newacronym{csi}{CSI}{Camera Serial Interface}
@@ -127,4 +128,9 @@
 \newacronym{sw}{SW}{Software}
 \newacronym{ir}{IR}{infrared}
 \newacronym{lirc}{LIRC}{Linux Infrared Remote Control}
+\newacronym{cots}{COTS}{Commercial off-the-shelf}
+\newacronym{pca}{PCA}{Programmable Counter Array}
+\newacronym{mcu}{MCU}{Micro Controller Unit}
+\newacronym{cpu}{CPU}{Central Processing Unit}
+\newacronym{isr}{ISR}{Interrupt Service Routine}
 % ========================== END ======================
