ADD: SW interfaces

--- a/Assignments/1/report/sec/acronyms.tex
+++ b/Assignments/1/report/sec/acronyms.tex
@@ -133,4 +133,5 @@
 \newacronym{mcu}{MCU}{Micro Controller Unit}
 \newacronym{cpu}{CPU}{Central Processing Unit}
 \newacronym{isr}{ISR}{Interrupt Service Routine}
+\newacronym{fifo}{FIFO}{First-In, First-Out}
 % ========================== END ======================
