ADD: prob statement

--- a/Proj/report/bib/dissert.bib
+++ b/Proj/report/bib/dissert.bib
@@ -237,5 +237,18 @@ url={shorturl.at/jmzV3},
 publisher={Microchip},
   note={accessed: 2021-10-11},
 }
+@misc{news-harvard,
+title={What the nose knows},
+url={https://news.harvard.edu/gazette/story/2020/02/how-scent-emotion-and-memory-are-intertwined-and-exploited/},
+publisher={The Harvard Gazette},
+  note={accessed: 2021-10-23},
+}
+@article{lindstrom2006brand,
+  title={Brand sense: How to build powerful brands through touch, taste, smell, sight and sound},
+  author={Lindstrom, Martin},
+  journal={Strategic Direction},
+  year={2006},
+  publisher={Emerald Group Publishing Limited}
+}
 % +++++++++++++++++++++++  END ==============================
 
