--- a/Proj/report/dissertation.tex
+++ b/Proj/report/dissertation.tex
@@ -154,14 +154,14 @@
   \include{./tex/Chap/1-Intro/INTRO}
   \setcounter{table}{0}
   \setcounter{figure}{0}
-
-\include{./tex/Chap/2-Analysis/ANALYSIS}
-\setcounter{table}{0}
-\setcounter{figure}{0}
 %
-\include{./tex/Chap/3-Design/DESIGN}
-\setcounter{table}{0}
-\setcounter{figure}{0}
+%\include{./tex/Chap/2-Analysis/ANALYSIS}
+%\setcounter{table}{0}
+%\setcounter{figure}{0}
+%%
+%\include{./tex/Chap/3-Design/DESIGN}
+%\setcounter{table}{0}
+%\setcounter{figure}{0}
 %
 %\include{./tex/Chap/4-Implem/IMPLEM}
 %\setcounter{table}{0}
