--- a/Proj/report/sty/dissertation-xelatex.sty
+++ b/Proj/report/sty/dissertation-xelatex.sty
@@ -553,9 +553,12 @@ align=left, leftmargin=*} %,label=$\star$
 
 % Default Department
 %\gdef\@department{Departamento de Inform\'{a}tica}
-\gdef\@department{Departamento de Engenharia Eletr\'{o}nica}
-\gdef\@school{Escola de Engenharia}
-\gdef\@university{Universidade do Minho}
+\gdef\@department{Electronics Engineering department}
+\gdef\@school{School of Engineering}
+\gdef\@university{University of Minho}
+%\gdef\@department{Departamento de Engenharia Eletr\'{o}nica}
+%\gdef\@school{Escola de Engenharia}
+%\gdef\@university{Universidade do Minho}
 %\gdef\@masterdegree{Computer Science}
 \gdef\@masterdegree{Mechatronics Engineering}
 
@@ -585,14 +588,14 @@ align=left, leftmargin=*} %,label=$\star$
 %\\\rule{0pt}{0.5cm}
 \\\withboldnewsgott{{Embedded systems}}
 \\\rule{0pt}{1cm}
-\\\withboldnewsgott{\large{Assignment 1: Report}}
+\\\withboldnewsgott{\large{Project: Report}}
 \\\rule{0pt}{3cm}
 %\\\withboldnewsgott{\Large\@titleA}
 %\\\withboldnewsgott{\Large\@titleB}
-\\\withboldnewsgott{\Huge{Development of a 3 button}}
-\\\withboldnewsgott{\Huge{TV remote control --- }}
-\\\withboldnewsgott{\Huge{Analysis \& Design}}
-\\\rule{0pt}{3cm}
+\\\withboldnewsgott{\Huge{Marketing Digital Outdoor}}
+\\\withboldnewsgott{\Huge{with gesture interaction ---}}
+\\\withboldnewsgott{\Huge{Problem statement}}
+\\\rule{0pt}{2cm}
 %\\\withboldnewsgott{\hspace{2cm}\large{Group 7}}
 \\\rule{0pt}{0.1cm}
 \\\withnewsgott{\large\@author}
@@ -605,7 +608,7 @@ align=left, leftmargin=*} %,label=$\star$
 \\\rule{0pt}{15mm}
 \\\optionalwithnewsgott{Supervised by:}
 \\\optionalwithboldnewsgott{\@supervisor}\rule{0pt}{4mm}
-%\\\optionalwithboldnewsgott{\@cosupervisor}
+\\\optionalwithboldnewsgott{\@cosupervisor}
 \\\rule{0pt}{1cm}
 \\\withnewsgott{{\small\@date}}
 \end{tabular}
@@ -659,6 +662,7 @@ align=left, leftmargin=*} %,label=$\star$
 %
 % Supervisor(s)
 \supervisor{Professor Tiago Gomes}
+\cosupervisor{Professor Ricardo Roriz}
 %
 % University (uncomment if you need to change default values)
 % \def\school{Escola de Engenharia}
