ADD: Market Research on Digital Outdoors

--- a/Proj/report/bib/dissert.bib
+++ b/Proj/report/bib/dissert.bib
@@ -250,5 +250,17 @@ publisher={The Harvard Gazette},
   year={2006},
   publisher={Emerald Group Publishing Limited}
 }
+@misc{digital-outdoor,
+title={Digital Outdoor Advertising: The What, The Why, The How},
+url={https://bubbleoutdoor.com/digital-outdoor-advertising-what-why-how/},
+publisher={Bubble Outdoor},
+  note={accessed: 2021-10-24},
+}
+@misc{outdoor-market,
+title={Digital outdoor market to be worth \$55 \gls{bn} in 5 years},
+url={https://www.decisionmarketing.co.uk/news/digital-outdoor-market-to-be-worth-55bn-in-5-years},
+publisher={DecisionMarketing},
+  note={accessed: 2021-10-24},
+}
 % +++++++++++++++++++++++  END ==============================
 
