--- a/Proj/report/dissertation.tex
+++ b/Proj/report/dissertation.tex
@@ -119,14 +119,14 @@
   \addcontentsline{toc}{chapter}{List of Listings}
   \lstlistoflistings%
   \cleardoublepage%
-  % list of Acronyms
- % \phantomsection%
- % \addcontentsline{toc}{chapter}{List of Abbreviations}
- % \listofacronyms%
- % \cleardoublepage%
+  %list of Acronyms
+  \phantomsection%
+  \addcontentsline{toc}{chapter}{List of Abbreviations}
+  \listofacronyms%
+  %\cleardoublepage%
+%    \printglossary[type=\acronymtype]%
     %\printglossary[type=\acronymtype]%
-    %\printglossary[type=\acronymtype]%
- %   \listofabbreviations%
+   %\listofabbreviations%
   % List of symbols
   \phantomsection%
   \addcontentsline{toc}{chapter}{List of Symbols}
