--- a/Proj/report/sec/acronyms.tex
+++ b/Proj/report/sec/acronyms.tex
@@ -134,4 +134,6 @@
 \newacronym{cpu}{CPU}{Central Processing Unit}
 \newacronym{isr}{ISR}{Interrupt Service Routine}
 \newacronym{fifo}{FIFO}{First-In, First-Out}
+\newacronym{dooh}{DOOH}{Digital Out-Of-Home}
+\newacronym{bn}{BN}{Billions}
 % ========================== END ======================
