ADD: Rest of Market Research

--- a/Proj/report/bib/dissert.bib
+++ b/Proj/report/bib/dissert.bib
@@ -262,5 +262,23 @@ url={https://www.decisionmarketing.co.uk/news/digital-outdoor-market-to-be-worth
 publisher={DecisionMarketing},
   note={accessed: 2021-10-24},
 }
+@misc{scent-market,
+title={Scent Marketing; Type of sensory marketing targeted at the olfactory sense},
+url={https://www.air-aroma.com/scent-marketing/},
+publisher={Air Aroma},
+note={accessed: 2021-10-24},
+}
+@misc{scent-stats,
+title={Scent Basics: What is Scent Marketing, Scent Branding and Ambient Scent},
+url={https://reedpacificmedia.com/scent-basics-what-is-scent-marketing-scent-branding-and-ambient-scent/},
+publisher={Isobel Chang},
+  note={accessed: 2021-10-24},
+}
+@misc{scent-money,
+title={Digital Scent Technology Market with COVID-19 Impact Analysis},
+url={https://www.marketsandmarkets.com/Market-Reports/digital-scent-technology-market-118670062.html},
+publisher={Digital Scent Technology Market},
+  note={accessed: 2021-10-24},
+}
 % +++++++++++++++++++++++  END ==============================
 
