--- a/Proj/report/sec/acronyms.tex
+++ b/Proj/report/sec/acronyms.tex
@@ -136,4 +136,7 @@
 \newacronym{fifo}{FIFO}{First-In, First-Out}
 \newacronym{dooh}{DOOH}{Digital Out-Of-Home}
 \newacronym{bn}{BN}{Billions}
+\newacronym{usd}{USD}{United States Dollar}
+\newacronym{cagr}{CAGR}{Compound Annual Growth Rate}
+\newacronym{rd}{R\&D}{Research and Development}
 % ========================== END ======================
