--- a/Proj/report/sec/acronyms.tex
+++ b/Proj/report/sec/acronyms.tex
@@ -139,4 +139,5 @@
 \newacronym{usd}{USD}{United States Dollar}
 \newacronym{cagr}{CAGR}{Compound Annual Growth Rate}
 \newacronym{rd}{R\&D}{Research and Development}
+\newacronym{esrg}{ESRG}{Embedded Systems Research Group}
 % ========================== END ======================
