UPDT: Intro chapter

--- a/Proj/report/sty/dissertation-xelatex.sty
+++ b/Proj/report/sty/dissertation-xelatex.sty
@@ -51,8 +51,7 @@
 %--------------------------------------
 % ---------- Hyphenations -----------
 % exceptions to hyphenation
-% src: https://tex.stackexchange.com/questions/171084/why-does-usepackagebritishbabel-hyphenate-the-word-alternate-incorrectly
-\babelhyphenation[english]{os-teo-in-te-gra-tion}
+\input{./sty/hyphenation.sty}
 
 % src: https://en.wikibooks.org/wiki/LaTeX/Source_Code_Listings
 \usepackage{listings}
