--- a/Proj/report/bib/dissert.bib
+++ b/Proj/report/bib/dissert.bib
@@ -280,5 +280,20 @@ url={https://www.marketsandmarkets.com/Market-Reports/digital-scent-technology-m
 publisher={Digital Scent Technology Market},
   note={accessed: 2021-10-24},
 }
+%
+@incollection{TaoCPS,
+title = {Chapter 12 - Digital Twin, Cyber–Physical System, and Internet of Things},
+editor = {Fei Tao and Meng Zhang and A.Y.C. Nee},
+booktitle = {Digital Twin Driven Smart Manufacturing},
+publisher = {Academic Press},
+pages = {243-256},
+year = {2019},
+isbn = {978-0-12-817630-6},
+doi = {https://doi.org/10.1016/B978-0-12-817630-6.00012-6},
+url = {https://www.sciencedirect.com/science/article/pii/B9780128176306000126},
+author = {Fei Tao and Meng Zhang and A.Y.C. Nee},
+keywords = {Digital twin (DT), cyber-physical system (CPS), Internet of Things (IoT), connections, smart manufacturing},
+abstract = {Cyber–physical system (CPS) and digital twin (DT) share the same goal, that is, achieving seamless integration between the physical and cyber worlds. CPS provides an integrated and compatible framework with a comprehensive perspective, and DT can be considered as a focused application of it. The DT carries characteristics of CPS, such as cyber–physical mapping, closed-loop control, and three-level structure, while its elements (e.g., high-fidelity models, fused data, and on-demand services) can further enhance the cyber–physical integration based on CPS. In this chapter, according to relations between the two concepts, an implementation framework of DT-based CPS is proposed to efficiently couple the physical and cyber worlds. Further, the Internet of Things (IoT) is applied to the framework to realize the connections within and across the physical world and cyber world, thus keeping each element connected interactively with each other.}
+}
 % +++++++++++++++++++++++  END ==============================
 
