--- a/Proj/report/tex/Append/APPENDICES.tex
+++ b/Proj/report/tex/Append/APPENDICES.tex
@@ -1,9 +1,9 @@
 % APPENDICES.tex: contains all appendices used
 \input{./tex/Append/append-planning}
-\input{./tex/Append/append-github}
-\input{./tex/Append/append-class-diagram-navig}
-\input{./tex/Append/append-class-diagram-android}
-\input{./tex/Append/append-class-diagram-vision}
+%\input{./tex/Append/append-github}
+%\input{./tex/Append/append-class-diagram-navig}
+%\input{./tex/Append/append-class-diagram-android}
+%\input{./tex/Append/append-class-diagram-vision}
 %\input{./tex/Append/append-UseCases}
 %\input{./tex/Append/append-SeqDiag}
 %
