ADD: project goals

--- a/Proj/report/sec/acronyms.tex
+++ b/Proj/report/sec/acronyms.tex
@@ -140,5 +140,6 @@
 \newacronym{cagr}{CAGR}{Compound Annual Growth Rate}
 \newacronym{rd}{R\&D}{Research and Development}
 \newacronym{esrg}{ESRG}{Embedded Systems Research Group}
-\newacronym{cps}{CPS}{Cyber--Physical Systems}
+\newacronym{cps}{CPS}{Cyber---Physical Systems}
+\newacronym{gif}{GIF}{Graphics Interchange Format}
 % ========================== END ======================
