--- a/Proj/report/sec/acronyms.tex
+++ b/Proj/report/sec/acronyms.tex
@@ -142,4 +142,5 @@
 \newacronym{esrg}{ESRG}{Embedded Systems Research Group}
 \newacronym{cps}{CPS}{Cyber---Physical Systems}
 \newacronym{gif}{GIF}{Graphics Interchange Format}
+\newacronym{mdo}{MDO}{Marketing Digital Outdoor}
 % ========================== END ======================
