ADD: Phase 1 doc to /submission

--- a/Proj/report/dissertation.tex
+++ b/Proj/report/dissertation.tex
@@ -155,9 +155,9 @@
   \setcounter{table}{0}
   \setcounter{figure}{0}
 %
-\include{./tex/Chap/2-Analysis/ANALYSIS}
-\setcounter{table}{0}
-\setcounter{figure}{0}
+%\include{./tex/Chap/2-Analysis/ANALYSIS}
+%\setcounter{table}{0}
+%\setcounter{figure}{0}
 %%
 %\include{./tex/Chap/3-Design/DESIGN}
 %\setcounter{table}{0}
