--- a/Proj/report/dissertation.tex
+++ b/Proj/report/dissertation.tex
@@ -155,7 +155,7 @@
   \setcounter{table}{0}
   \setcounter{figure}{0}
 %
-%\include{./tex/Chap/2-Analysis/ANALYSIS}
+  \include{./tex/Chap/2-Analysis/ANALYSIS}
 %\setcounter{table}{0}
 %\setcounter{figure}{0}
 %%
