UPDT: sys overview

--- a/Proj/report/sec/acronyms.tex
+++ b/Proj/report/sec/acronyms.tex
@@ -75,7 +75,7 @@
 \newacronym{iot}{IOT}{Internet of Things}
 \newacronym{tcp}{TCP}{Transmission Control Protocol}
 \newacronym{ip}{IP}{Internet Protocol}
-\newacronym{tcpip}{TCP/IP}{Transmission Control Protocol/Internet Protocol}
+\newacronym{tcp-ip}{TCP/IP}{Transmission Control Protocol/Internet Protocol}
 \newacronym{hci}{HCI}{Host Controller Interface}
 \newacronym{udp}{UDP}{User Datagram Protocol}
 \newacronym{rfcomm}{RFCOMM}{Radio Frequency Communications}
@@ -143,4 +143,7 @@
 \newacronym{cps}{CPS}{Cyber---Physical Systems}
 \newacronym{mdo}{MDO}{Marketing Digital Outdoor}
 \newacronym{gif}{GIF}{Graphics Interchange Format}
+\newacronym{mdo-rc}{MDO-RC}{MDO Remote Client}
+\newacronym{mdo-rs}{MDO-RS}{MDO Remote Server}
+\newacronym{mdo-l}{MDO-L}{MDO Local system}
 % ========================== END ======================
