--- a/readme.org
+++ b/readme.org
@@ -222,7 +222,34 @@ Research link: https://www.one-tab.com/page/TZxmVAXJTO6nVyNO593ARA
 - [ ] Power supply
 - [ ] Mechanical structure
 - [X] Camera: 14 EUR - https://shorturl.at/gnpCU
+*** Analysis
+**** System architecture
+*Example*
+#+BEGIN_QUOTE
+BRAND -> DB
+RC -> RS: q brand Nestle
+RS -> DB: query brand Nestle
+DS -> RS: Nestle milka.mp4 milka.wav Chocolate
+RS -> RC: Nestle milka.mp4 milka.wav Chocolate
 
+COMPANY -> MDO-L
+Staff member login
+    RC -> RS: q mdo systems
+    RS -> DB: query mdo-systems
+    DB -> RS: std::<vector> mdo_systems
+    for(i = 0; i < mdo_systems.size(); i++ )
+        RS -> RC: mdo_systems[i]
+RC -> RC: Select MDO-L machine
+Send command
+    RC -> RS: mdo <nr> <command> (mdo 1 get mode)
+    RS -> RS: parse command
+    RS -> RS: get mdo_nr IP (query mdo-systems 1 IP)
+    RS -> MDO-L: connect IP:port
+    MDO-L -> RS: connected
+    RS -> MDO-L: get mode
+    MDO-L -> RS: normal mode (example)
+    RS -> RC: normal
+#+END_QUOTE
 * Tools
 ** Project management
  1) Latex:
