ADD: HW architecture

--- a/Proj/report/sec/acronyms.tex
+++ b/Proj/report/sec/acronyms.tex
@@ -145,5 +145,5 @@
 \newacronym{gif}{GIF}{Graphics Interchange Format}
 \newacronym{mdo-rc}{MDO-RC}{MDO Remote Client}
 \newacronym{mdo-rs}{MDO-RS}{MDO Remote Server}
-\newacronym{mdo-l}{MDO-L}{MDO Local system}
+\newacronym{mdo-l}{MDO-L}{MDO Local System}
 % ========================== END ======================
