ADD: sys-arch for remote server

--- a/Proj/report/sec/acronyms.tex
+++ b/Proj/report/sec/acronyms.tex
@@ -146,4 +146,7 @@
 \newacronym{mdo-rc}{MDO-RC}{MDO Remote Client}
 \newacronym{mdo-rs}{MDO-RS}{MDO Remote Server}
 \newacronym{mdo-l}{MDO-L}{MDO Local System}
+\newacronym{db}{DB}{Database}
+\newacronym{bsp}{BSP}{Board Support Package}
+\newacronym{rdbms}{RDBMS}{Relational Database Management System}
 % ========================== END ======================
