ADD: sw-arch local

--- a/Proj/report/sec/acronyms.tex
+++ b/Proj/report/sec/acronyms.tex
@@ -149,4 +149,5 @@
 \newacronym{db}{DB}{Database}
 \newacronym{bsp}{BSP}{Board Support Package}
 \newacronym{rdbms}{RDBMS}{Relational Database Management System}
+\newacronym{cv}{CV}{Computer Vision}
 % ========================== END ======================
