ADD: Sys-mockup remote client

--- a/Proj/report/sec/acronyms.tex
+++ b/Proj/report/sec/acronyms.tex
@@ -150,4 +150,5 @@
 \newacronym{bsp}{BSP}{Board Support Package}
 \newacronym{rdbms}{RDBMS}{Relational Database Management System}
 \newacronym{cv}{CV}{Computer Vision}
+\newacronym{soc}{SoC}{System-on-a-Chip}
 % ========================== END ======================
