--- a/Proj/report/sec/acronyms.tex
+++ b/Proj/report/sec/acronyms.tex
@@ -151,4 +151,6 @@
 \newacronym{rdbms}{RDBMS}{Relational Database Management System}
 \newacronym{cv}{CV}{Computer Vision}
 \newacronym{soc}{SoC}{System-on-a-Chip}
+\newacronym{ac}{AC}{Alternating Current}
+\newacronym{dc}{DC}{Direct Current}
 % ========================== END ======================
