--- a/Proj/report/tex/commands_usage.tex
+++ b/Proj/report/tex/commands_usage.tex
@@ -132,6 +132,32 @@ Images should be added to folder /img/.
   \caption{KF procedure overview (withdrawn from~\cite{mccarron2013low})}%
 \label{fig:kalmanf}
 \end{figure}
+
+% subfigures
+\begin{figure}[htb!]
+  \centering
+  %
+  \begin{subfigure}{.4\textwidth}
+  \includegraphics[width=\textwidth]{img/PTestOriginalPosition.jpg}%
+  \caption{KUKA's original position}%
+  \label{fig:ptp-test-orig}
+\end{subfigure}
+%
+  \begin{subfigure}{.20\textwidth}
+    \includegraphics[width=\textwidth]{img/PTestFinalPosition.jpg}%
+  \caption{KUKA's final position}%
+  \label{fig:ptp-test-final}
+  \end{subfigure}
+%
+  \begin{subfigure}{.38\textwidth}
+    \includegraphics[width=\textwidth]{img/PTestOutput.png}%
+  \caption{PTP command output --- custom solution}%
+  \label{fig:ptp-test-out}
+  \end{subfigure}
+  % 
+  \caption{PTP command test --- custom solution}%
+  \label{fig:ptp-test}
+\end{figure}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 %%%%%%%%%%%%%%% Tables %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
